--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@types/node": "^20",
