adiciona novo grupo

--- a/src/data/areas.json
+++ b/src/data/areas.json
@@ -19,5 +19,8 @@
     },
     {
         "src": "https://res.cloudinary.com/dhydj6hqf/image/upload/v1704845559/all_lfd4x2.webp"
+    },
+    {
+        "src": "https://res.cloudinary.com/dhydj6hqf/image/upload/v1709388143/novaCelula_mon7yv.webp"
     }
 ]
